# ChangeLog for x11-apps/xkbevd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xkbevd/ChangeLog,v 1.25 2009/10/11 10:51:18 nixnut Exp $

  11 Oct 2009; nixnut <nixnut@gentoo.org> xkbevd-1.0.2.ebuild:
  ppc stable #282290

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> xkbevd-1.0.2.ebuild:
  amd64 stable wrt #282290

  23 Jun 2009; Tobias Klausmann <klausman@gentoo.org> xkbevd-1.0.2.ebuild:
  Stable on alpha for xorg-server-1.5/xorg-x11-7.4

  28 May 2009; Raúl Porcel <armin76@gentoo.org> xkbevd-1.0.2.ebuild:
  Add ~alpha

  05 May 2009; Christian Faulhammer <fauli@gentoo.org> xkbevd-1.0.2.ebuild:
  fix repoman warnings

  03 Oct 2008; Raúl Porcel <armin76@gentoo.org> xkbevd-1.0.2.ebuild:
  Add ~ia64 wrt #237411

  26 Sep 2008; Jeroen Roovers <jer@gentoo.org> xkbevd-1.0.2.ebuild:
  Marked ~hppa (bug #237411).

  24 Sep 2008; Alexis Ballier <aballier@gentoo.org> xkbevd-1.0.2.ebuild:
  keyword ~x86-fbsd

  11 Sep 2008; Donnie Berkholz <dberkholz@gentoo.org>; xkbevd-1.0.2.ebuild:
  Keyword ~amd64.

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xkbevd-1.0.2.ebuild:
  Stable on x86 (bug #202087)

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; xkbevd-1.0.2.ebuild:
  Update description to be less generic.

  20 May 2006; Robin H. Johnson <robbat2@gentoo.org> xkbevd-1.0.2.ebuild:
  Added ~ppc after testing.

  08 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>; -xkbevd-1.0.1.ebuild:
  Pull old ebuild.

*xkbevd-1.0.2 (04 Apr 2006)

  04 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>; +xkbevd-1.0.2.ebuild:
  Man page fixes.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> xkbevd-1.0.1.ebuild:
  Added ~ppc64

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -xkbevd-0.99.3.ebuild, -xkbevd-1.0.0.ebuild:
  Pull old versions.

*xkbevd-1.0.1 (23 Dec 2005)

  23 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; +xkbevd-1.0.1.ebuild:
  Bump for 7.0.

*xkbevd-1.0.0 (18 Dec 2005)
